# RootManage-Module-Model

./: .gitignore  BUILD_VERIFICATION.md  Cross.toml  LICENSE  README.md  pyproject.toml  update.json
.github/workflows/: README.MD  release.yml
MyModule/: module.prop
rust/: Cargo.toml
rust/src/: core.rs  lib.rs  main.rs
rust/src/cmds/: init.rs  sync.rs
rust/src/core/: mod.rs  python_bindings.rs  rmm_core.rs
src/pyrmm/: __init__.py
src/pyrmm/ai/: rmmcp.py
src/pyrmm/cli/: __init__.py
