[package]
name = "rmm"
version = "0.3.5"
edition = "2024"
description = "高性能RMMP管理器"
license = "MIT"
homepage = "https://github.com/LIghtJUNction/RootManageModuleModel"
repository = "https://github.com/LIghtJUNction/RootManageModuleModel"

authors = ["LIghtJUNction <lightjuntion.me@gmail.com>"]


[lib]
name = "rmmcore"
crate-type = ["cdylib"]

[[bin]]
name = "rmm"
path = "src/main.rs"

[dependencies]
pyo3 = { version = "0.26.0", features = ["extension-module"] }
clap = { version = "4.5.40", features = ["derive"] }
clap_complete = "4.5.58"
anyhow = "1.0.100"
serde = { version = "1.0.228", features = ["derive"] }
toml = "0.9.7"
chrono = { version = "0.4.42", features = ["serde"] }
serde_json = "1.0.145"
regex = "1.11.3"
reqwest = { version = "0.12.23", features = ["json"], default-features = false }
tokio = { version = "1.47.1", features = ["rt-multi-thread"] }
git2 = "0.20.2"
glob = "0.3.3"
zip = "4.0.0"
flate2 = "1.1.4"
tar = "0.4.44"
walkdir = "2.5.0"
humantime = "2.3.0"
colored =  "3"

[dev-dependencies]
tempfile = "3.23.0"

[profile.release]
lto = true
strip = true      
opt-level = 3
panic = "abort"

[profile.dev]
opt-level = 0
panic = "unwind"

[build-dependencies]
pyo3-build-config = "0.26.0"

